# bogodroid

./: .gitignore  CMakeLists.txt  README.md
configs/: teapot.toml  unity.toml
gamefiles/teapot/: README.md
javastubs/: android.cpp  android.h  javac.cpp  javac.h
loader/: io_util.cpp  io_util.h  so_util.cpp
platform/common/: config.cpp  config.h  debug_utils.cpp  debug_utils.h  logging.h
projects/teapotloader/: main.cpp
projects/teapotloader/javastubs/: binding.cpp  teapot.cpp  teapot.h
projects/unityloader/: main.cpp
projects/unityloader/javastubs/: binding.cpp  jnibridge.cpp  unity.cpp  unity.h
thunks/: thunk_gen_dyn.h
thunks/egl_sdl/: egl_sdl.cpp  egl_sdl.h
thunks/khronos/: egl.cpp  glad.h  gles2.cpp  gles2_funcs.hpp
thunks/libc/: fcntl.cpp  impl_header.h  impl_tab.h  misc.cpp  sigaction.cpp
thunks/ndk/: alooper.c  alooper.h  anative_activity.h  asset_manager.c  asset_manager.h  ndk.cpp  ndk.h
